{
    "name": "MainControlls",
    "maps": [
        {
            "name": "Controlls",
            "id": "81b865bf-9bad-4e10-b452-6cda78875783",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "69ef455e-997b-4007-9a24-30290261903a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "872e0546-1ae5-401e-ad18-68acc87810bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "73abe305-63b1-40a2-b33e-0cbaeec956ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResetButtons",
                    "type": "Button",
                    "id": "f06c38ac-9d1a-4cf2-9666-c6a2f7971a38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "44afead9-2249-4138-a05d-080f9cc7c47b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "7ae0cd08-3f63-48c5-813a-c1d31d52cc6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseControll",
                    "type": "Button",
                    "id": "6bfbf9ae-efcb-4803-9cbf-8af3fad1e414",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HelpButton",
                    "type": "Button",
                    "id": "fdb76df7-157b-4f99-a9ce-863c44e73d5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ExitButton",
                    "type": "Button",
                    "id": "3e5e6113-ebbf-4e94-86f5-fb3aec81e8e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f0f0f959-a89a-413e-b8c2-2587b3ea4c94",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bd230c3-a231-4e79-9c5f-f4ece9bb8f5c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2a0eae4-8ec9-4de0-8f5f-6e673cc9e595",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74517615-839c-41e1-8e70-23ad5510b4e3",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adfa0b16-4378-4af4-b0bc-0b40a7a669de",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b24c6ca-5662-4741-9432-9dc4405d4824",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f22723c-e62c-47fc-a9ef-84d0759a53d6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "563c23fa-1335-4956-9d69-6e441ec5e559",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec90f6b3-8878-4307-b94f-a3f60d3ce320",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6555ec4-d7a8-421f-b24e-7eb5c66368f4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08122fb5-42cf-4c0c-b339-24c7c2e5da17",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "ResetButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff0345e9-09e1-4b04-b3f8-5ee46f851d43",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControllScheamsAllPlatforms",
                    "action": "ResetButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5b6c411-f228-4486-8f56-05e2df1ce6d7",
                    "path": "<Touchscreen>/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8d0fb91-a0cf-4a55-a7e2-a4489fed0a4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ebb26fe-2bcb-4726-89cb-e3a0db1fb629",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ba3702f-a740-4713-9675-f3644ff27e31",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d72a382-2ed8-463f-b86c-1803c63a3bf3",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ea4d5e-67bd-41c1-a133-77bf2076226c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb34bd1f-81ff-4f76-b871-b05a45ff129a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71b21a6c-2fcc-4843-b5c6-acd52bdfabb0",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72bafac4-3e32-4bf3-ae67-1e105baa7b5d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e519d1ed-83aa-45cc-b5d7-ef836d4b17ab",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseControll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74fcdddd-7b2e-4c93-8165-42150c7364e3",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseControll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c310b66-a79b-4887-866a-da7444fde2b8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HelpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1fc5bb4-f936-4e32-b0a3-c608ec798362",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HelpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bd3418d-ed26-4496-bf13-3e3f0df1ddff",
                    "path": "<Keyboard>/escape",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ExitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a1954c7-051f-4b2b-bc89-6c9afd17b4d6",
                    "path": "<Touchscreen>/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ExitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MainControllScheamsAllPlatforms",
            "bindingGroup": "MainControllScheamsAllPlatforms",
            "devices": []
        }
    ]
}